<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cubity</string>
    <string name="app_name_caps">CUBITY</string>
    <string name="app_tagline">Receivables</string>
    <string name="offline_message">Can’t reach Cubity right now.\nCheck internet and try again.</string>
    <string name="retry">Try again</string>
    <string name="no_app">No app found to open this</string>
    <string name="download_started">Saving %1$s</string>
</resources>
